--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -16,3 +16,17 @@
     display: flex;
     flex-direction: column;
 }
+
+#header {
+    background-color: rgb(33, 150, 243);
+}
+
+.header-container {
+    width: 1340px;
+    max-width: 1340px;
+    margin: 0 auto;
+}
+
+.input-container {
+    margin-right: 2px;
+}
