--- a/aviasales-demo-frontend/src/TicketHeader.css
+++ b/aviasales-demo-frontend/src/TicketHeader.css
@@ -4,3 +4,44 @@ body {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
+.logo-container {
+    width: auto;
+    display: inline-block;
+    height: auto
+}
+.main-logo {
+    width: auto;
+    max-width: 100%;
+}
+
+.logo-link {
+    display: inline-block;
+}
+
+.fields {
+    display: flex;
+    flex-direction: column;
+}
+
+#header {
+    background-color: rgb(33, 150, 243);
+}
+
+.header-container {
+    width: 1340px;
+    max-width: 1340px;
+    margin: 0 auto;
+}
+
+.input-container {
+    margin-right: 2px;
+    position: relative;
+}
+
+.input--calendar_from{
+  position: relative;
+}
+
+.buttons-container {
+  margin-left: 30px;
+}
