--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -1,33 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-.logo-container {
-    width: auto;
-    display: inline-block;
-    height: auto
-}
-.main-logo {
-    width: auto;
-    max-width: 100%;
+.input-icon {
+    cursor: pointer;
 }
 
-.logo-link {
-    display: inline-block;
+.input-icon--calendar::after {
+    content: '';
+    background-image: url('./img/icone-depart.svg');
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 17px;
+    height: 20px;
 }
 
-.fields {
-    display: flex;
-    flex-direction: column;
+.input-icon--close::after {
+    content: '';
+    background-image: url('./img/date-clear.svg');
+    position: absolute;
+    top: 5px;
+    left: 0;
+    width: 14px;
+    height: 14px;   
 }
 
-#header {
-    background-color: rgb(33, 150, 243);
-}
-
-.header-container {
-    width: 1340px;
-    max-width: 1340px;
-    margin: 0 auto;
-}
-
-.input-container {
-    margin-right: 2px;
+.input-icon--select::after {
+    content: '';
+    background-image: url('./img/Shapearrowinput.svg');
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 8px;
+    left: 40px;
+    width: 14px;
+    height: 14px;   
 }
