--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -44,7 +44,7 @@
     height: 14px;   
 }
 
-.input-icon--arrows::before{
+.input-icon--arrows::before {
     content: '';
     background-image: url('./img/arrow.svg');
     background-repeat: no-repeat;
@@ -54,4 +54,73 @@
     width: 14px;
     height: 14px;   
     transform: scale(-1,1);
+}
+
+.input-checkbox {
+    opacity: 0;
+}
+
+.label-checkbox {
+    position: relative;
+    display: inline-block;
+    padding-left: 30px;
+    font-size: 12px;
+}
+.input-checkbox:checked + .label-checkbox::before {
+        background-color: #f2fcff;
+        border-color: #00ACE2;
+}
+.label-checkbox::before,
+.label-checkbox::after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+}
+
+.label-checkbox::before{
+    height: 18px;
+    width: 18px;
+    border: 1px solid #A0B0B9;
+    border-radius: 3px;
+    left: 0;
+    top: -3px;
+}
+
+.label-checkbox::after {
+    height: 3px;
+    width: 6px;
+    border-left: 2px solid;
+    border-bottom: 2px solid;
+    transform: rotate(-45deg);
+    color: #00ACE2;
+    left: 6px;
+    transition: all .2s ease;
+    top: 3px;
+}
+
+.input-checkbox + .label-checkbox::after {
+    content: none;
+}
+
+.input-checkbox:checked + .label-checkbox::after{
+    content: "";
+}
+/* .input-checkbox:focus + .label-checkbox::before {
+    outline: rgb(59, 153, 252) auto 5px;
+} */
+
+.inputs-container {
+    margin-bottom: 18px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.transpilantation-container {
+    font-size: 12px;
+    color: #5B5B5C;
+}
+
+.menu-header {
+    text-transform: uppercase;
 }
