--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -119,8 +119,13 @@
 .transpilantation-container {
     font-size: 12px;
     color: #5B5B5C;
+    padding-top: 56px;
 }
 
 .menu-header {
     text-transform: uppercase;
+    font-size: 12px;
+    padding-bottom: 26px;
+    padding-left: 40px;
 }
+
