--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -127,5 +127,29 @@
     font-size: 12px;
     padding-bottom: 26px;
     padding-left: 40px;
+    position: relative;
 }
 
+
+.menu-header::after {
+    content: "";
+    background-image: url('./img/clear.svg');
+    background-repeat:  no-repeat;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: auto;
+    right: 16px;
+}
+
+.menu-header::before {
+    content: "";
+    background-image: url('./img/shapearrowgrey.svg');
+    background-repeat:  no-repeat;
+    position: absolute;
+    width: 16px;
+    left: 16px;
+    top: 2px;
+    height: 16px;
+
+}
