--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -119,7 +119,8 @@
 .transpilantation-container {
     font-size: 12px;
     color: #5B5B5C;
-    padding-top: 56px;
+    margin-top: 56px;
+    border-bottom: 1px solid #DDDDDD;
 }
 
 .menu-header {
@@ -151,5 +152,4 @@
     left: 16px;
     top: 2px;
     height: 16px;
-
 }
