--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -169,4 +169,62 @@
 
 .arrivals-list {
     padding-left: 16px;
+    line-height: 18px;
 }
+
+.arrives-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.arrivals-container__descr-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 16px;
+}
+
+.arrive-descr {
+    display: block;
+    width: auto;
+}
+input[type=range] {
+    -webkit-appearance: none; /* Скрывает слайдер, чтобы можно было создать свой */
+    width: 100%; /* Указание параметра ширины требуется для Firefox. */
+  }
+  
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+  }
+  
+  input[type=range]:focus {
+    outline: none; /* Убирает голубую границу у элемента. Хотя, возможно, и стоит создавать некоторое оформления для состояния фокуса в целях обеспечения доступности. */
+  }
+  
+  input[type=range]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+    background: transparent; /* Скрывает слайдер, чтобы можно было добавить собственные стили. */
+    border-color: transparent;
+    color: transparent;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #D6D9DA;
+    border-radius: 10px;
+    background: #ffffff;
+    cursor: pointer;
+    margin-top: -14px; /* Вам нужно указать значение для поля в Chrome, но в Firefox и IE это происходит автоматически */
+  }
+
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    background: #00ACDE;
+    border-radius: 2px;
+    border: 2px solid #00ACDE;
+  }
