--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -224,7 +224,33 @@ input[type=range] {
     width: 100%;
     height: 2px;
     cursor: pointer;
-    background: #00ACDE;
     border-radius: 2px;
     border: 2px solid #00ACDE;
+  }
+
+
+  .bar {
+      background:#00ACDE;
+      width: 100%;
+      height: 2px;
+      margin-top: 11px;
+      margin-bottom: 11px;
+  }
+
+  .range-toggle  {
+      border-radius: 50%;
+      border: 1px solid #D6D9DA;
+      background-color: #fff;
+      width: 16px;
+      height: 16px;
+      position: absolute;
+      top: 3px;
+  }
+
+  .range-toggle-max {
+      right: 0;
+  }
+
+  .scale {
+      position: relative;
   }
