--- a/aviasales-demo-frontend/src/TicketHeader.css
+++ b/aviasales-demo-frontend/src/TicketHeader.css
@@ -33,8 +33,8 @@ body {
     margin: 0 auto;
 }
 #transplantation {
-  width: 1340px;
-  max-width: 1340px;
+  width: 1308px;
+  max-width: 1308px;
   margin: 0 auto;
 }
 
@@ -55,4 +55,8 @@ body {
 
 .header-container {
   padding-bottom: 32px;
+}
+
+.transpilation-block {
+    padding-top: 16px;
 }
