--- a/aviasales-demo-frontend/src/TicketHeader.css
+++ b/aviasales-demo-frontend/src/TicketHeader.css
@@ -61,4 +61,11 @@ body {
 
 .transpilation-block {
     padding-top: 16px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.arrive-info-text--time-fly {
+    font-size: 28px;
+    letter-spacing: 1px;
+    font-weight: normal;
 }
