--- a/aviasales-demo-frontend/src/style.css
+++ b/aviasales-demo-frontend/src/style.css
@@ -5,7 +5,6 @@ body {
 .input-icon {
     cursor: pointer;
 }
-
 .input-icon--calendar::after {
     content: '';
     background-image: url('./img/icone-depart.svg');
@@ -125,6 +124,7 @@ body {
     color: #5B5B5C;
     border-bottom: 1px solid #DDDDDD;
     background-color: #fff;
+    flex-basis: 20%;
 }
 
 .menu-header {
@@ -200,8 +200,6 @@ body {
     background-color: #fff;
     display: flex;
 }
-
-.
 
 .arrivals-list {
     line-height: 18px;
@@ -305,5 +303,94 @@ body {
     margin-bottom: 10px; 
 }
 .buttons-container--flight-block {
-    margin-left: 0
+    margin-left: 0;
+    padding-top: 16px;
+    display: flex;
+    flex-direction: column;
+}
+
+.flight-buy-container {
+    max-width: 60%;
+    flex-basis: 60%;
+}
+
+.buy-container {
+    border-right: 1px solid #DDDDDD;
+    padding-right: 23px;
+    display: flex;
+    flex-direction: column;
+}
+
+.airoport-name {
+    position: absolute;
+    bottom: 0;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+.airoport-name--right {
+    right: 0;
+}
+
+.flight-header {
+    display: block;
+    padding-bottom: 20px;
+}
+.chart-label {
+    display: inline-block;
+    vertical-align: top;
+    color: #23A9F6;
+    padding: 8px;
+    border: 1px solid #23A9F6;
+    border-radius: 29px;
+    width: 50px;
+    text-align: center;
+    font-size: 10px;
+    margin-left: auto;
+    margin-right: 38px;
+    float: right;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.company-info {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    float: right;
+    width: 17px;
+    height: 14px;
+    top: 6px;
+    right: 0;
+    left: -20px;
+    cursor: pointer;
+}
+.company-info::after {
+    content: "";
+    position: absolute;
+    background-image: url('./img/shapInfo.png');
+    width: inherit;
+    height: inherit;
+    left: 0;
+}
+
+.company-img {
+    display: inline-block;
+}
+
+.flight-information {
+    position: relative;
+    background-color: #EDF5F7;
+    width: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.flight-information__icon {
+    margin: auto;
+}
+
+.flight-container {
+    margin-bottom: 20px;
 }
